--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A web-based application for managing your reports with ease and simplicity."
     />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -13,7 +13,7 @@
         margin: 0;
       }
     </style>
-    <title>Incident System</title>
+    <title>FilinGo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
